# auth

./: .dockerignore  .env-non-dev  .env.example  .flake8  .gitignore  Caddyfile  Dockerfile  alembic.ini  cli.py  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  flake.yaml  mypy.yaml
app/: __init__.py  consts.py  main.py  redis.py
app/core/: base_schemas.py  config.py  logger.py  middleware.py
app/db/: database.py  uow.py
app/db/repositories/: auth_repository.py  base_repo.py  users_repository.py
app/models/: auth.py  users.py
app/pages/: router.py
app/routers/: dependencies.py  routers.py
app/routers/private/: auth.py  users.py
app/routers/public/: auth.py  users.py
app/services/: auth_service.py  users_service.py
app/static/css/: confirm_email.css  edit_user.css  profile.css  reset_password.css
app/static/js/: confirm_email.js  edit_user.js  login.js  profile.js  register.js  reset_password.js
app/tasks/: celery_app.py  email_templates.py  tasks.py
app/templates/: activate.html  confirm_email.html  edit_user.html  login.html  profile.html  register.html  reset_password.html
app/utils/: telegram_utils.py  users_utils.py
migrations/: env.py
migrations/versions/: 6316e1caa965_2024_03_17t00_28_36_215758.py  9d54a1ed68e5_2023_09_06t22_42_10_789939.py  e65304025e68_2024_01_28t18_16_41_781876.py  e9b8dee11d2c_2023_09_10t14_34_58_731968.py
scripts/: app.sh  celery.sh
tests/: conftest.py  test_1.py
